--- a/config/config.jsonc
+++ b/config/config.jsonc
@@ -6,6 +6,8 @@
     // A setting of 40 is roughly 36% chance
     // A setting of 100 is roughly 66% chance
     // A setting of 500 is roughly 97% chance
-    // IF YOU WANT TO SEE THE CHANCE OF THE VALUE YOU SET, LOOK IN YOUR SERVER LOG
-    "legaMedalChance": 15
+    // IF YOU WANT TO SEE THE ACTUAL CHANCE OF THE VALUE YOU SET, ENABLE DEBUGLOGGING & LOOK IN YOUR SERVER LOG
+    "legaMedalChance": 15,
+
+    "debugLogging": false
 }
