--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Bosses Have Lega Medals",
-    "version": "1.2.0",
-    "sptVersion": "~3.10",
+    "version": "1.3.0",
+    "sptVersion": "~3.11",
     "loadBefore": [],
     "loadAfter": [],
     "incompatibilities": [],
@@ -13,7 +13,7 @@
         "buildinfo": "node ./build.mjs --verbose"
     },
     "devDependencies": {
-        "@types/node": "20.11",
+        "@types/node": "22.10.5",
         "@typescript-eslint/eslint-plugin": "7.2",
         "@typescript-eslint/parser": "7.2",
         "archiver": "^6.0",
@@ -21,8 +21,9 @@
         "fs-extra": "11.2",
         "ignore": "^5.2",
         "tsyringe": "4.8.0",
-        "typescript": "5.4",
-        "winston": "3.12"
+        "typescript": "5.7.3",
+        "winston": "3.17.0",
+        "jsonc": "2.0.0"
     },
     "author": "acidphantasm",
     "contributors": [],
